spacing issue on portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,7 @@ h3 {
     height: auto;
     max-width: 800px;
     max-height: 900px;
+    padding: 8px 0 8px 0
 }
 
 p.intro {
